# HTTPserver

./: .gitignore  CMakeLists.txt  README.md  library.h
src/HTTPServer/: HTTPServer.cpp  HTTPServer.h
src/TCPClient/: tcpClient.cpp  tcpClient.h  tcpClientConstants.h
src/TCPServer/: tcpServer.cpp  tcpServer.h  tcpServerConstants.h
src/exceptions/: exceptions.cpp  exceptions.h
src/run/: RunMultipleTCPClients.cpp  RunTCPClient.cpp  RunTCPServer.cpp  runHTTPServer.cpp
src/utilities/http/: HTTPRequest.cpp  HTTPRequest.h  HTTPResponder.cpp  HTTPResponder.h  README.md  httpHeaders.cpp  httpHeaders.h  httpMessages.cpp  httpMessages.h  httpMethods.cpp  httpMethods.h  httpParser.cpp  httpParser.h
src/utilities/message/: message.cpp  message.h
src/utilities/request/: Request.cpp  Request.h
src/utilities/response/: Responder.cpp  Responder.h
src/utilities/sockets/: sockets.cpp  sockets.h
src/utilities/tcp/: TCPRequest.cpp  TCPRequest.h  TCPResponder.cpp  TCPResponder.h
